--- a/force-layout.html
+++ b/force-layout.html
@@ -2,16 +2,16 @@
 <meta charset="utf-8">
 
 <style src="styling.css"></style>
-<script src="d3.js" charset="utf-8"></script>
-<script src="jQuery.js" charset="utf-8"></script>
-<script src="context-menu.js" type="text/javascript"></script>
-<script src="color-parser.js" type="text/javascript"></script>
-<script src="canvg.js" type="text/javascript"></script>
-<script src="FileSaver.js" type="text/javascript"></script>
-<script src="Blob.js" type="text/javascript"></script>
-<script src="canvas-toBlob.js" type="text/javascript"></script>
-<script src="unions.js" type='text/javascript'></script>
-<script src="code.js" type='text/javascript'></script>
+<script src="js/d3.js" charset="utf-8"></script>
+<script src="js/jQuery.js" charset="utf-8"></script>
+<script src="js/context-menu.js" type="text/javascript"></script>
+<script src="js/color-parser.js" type="text/javascript"></script>
+<script src="js/canvg.js" type="text/javascript"></script>
+<script src="js/FileSaver.js" type="text/javascript"></script>
+<script src="js/Blob.js" type="text/javascript"></script>
+<script src="js/canvas-toBlob.js" type="text/javascript"></script>
+<script src="js/unions.js" type='text/javascript'></script>
+<script src="js/code.js" type='text/javascript'></script>
 
 <body>
 <article>
@@ -54,5 +54,5 @@
     <canvas id='svg-export'></canvas>
 </dialog>
 
-<script src='visualization.js'></script>
+<script src='js/visualization.js'></script>
 </body>
