--- a/force-layout.html
+++ b/force-layout.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 
-<style src="styling.css"></style>
+<link href="css/bootstrap.css" rel="stylesheet" type="text/css" />
+<style src="css/styling.css"></style>
 <script src="js/d3.js" charset="utf-8"></script>
 <script src="js/jQuery.js" charset="utf-8"></script>
 <script src="js/context-menu.js" type="text/javascript"></script>
@@ -12,6 +13,8 @@
 <script src="js/canvas-toBlob.js" type="text/javascript"></script>
 <script src="js/unions.js" type='text/javascript'></script>
 <script src="js/code.js" type='text/javascript'></script>
+<script src="js/bootstrap.js" type="text/javascript"></script>
+
 
 <body>
 <article>
@@ -54,5 +57,6 @@
     <canvas id='svg-export'></canvas>
 </dialog>
 
-<script src='js/visualization.js'></script>
+<script src="js/visualization.js" type="text/javascript"></script>
+
 </body>
