--- a/force-layout.html
+++ b/force-layout.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+
 <link rel="stylesheet" type="text/css" href="css/jquery.contextMenu.css">
+<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+
 <script type="text/javascript" src="js/d3.js"></script>
 <script type="text/javascript" src="js/jquery-1.11.3.js"></script>
 <script type="text/javascript" src="js/jquery.contextMenu.js"></script>
@@ -10,43 +13,45 @@
 <script type="text/javascript" src="js/Blob.js"></script>
 <script type="text/javascript" src="js/canvas-toBlob.js"></script>
 <script type="text/javascript" src="js/misc.js"></script>
+<script type="text/javascript" src="js/bootstrap.js"></script>
 
 <body>
-  <article>
-    <aside>
-      <ul>
-        <li>
-          <button type="button" onclick="reset_display()">Reset</button>
-        </li>
-        <li>
-          <button
-              id='threshold-activate-menu'
-              type='button'
-              class='context-menu-threshold'
-              type='submit'>Threshold</button>
-            <!-- oninput works with chrome/onchange IE -->
-            <input type='number'
-              id='thresholdNumber'
-              min='0.0'
-              max='0.04'
-              value='0.037'
-              step='0.001'
-          />
-        </li>
-        <li>
-          <button
-            id='color-activate-menu'
-            type='button'
-            class='context-menu-colors'
-            type='submit'>Symbols</button>
-        </li>
-        <li>
-          <button type="button" onclick="export_image()">Export Image</button>
-        </li>
-      </ul>
-    </aside>
-    <svg id='transmission-network'></svg>
-  </article>
+  <div class="container">
+    &nbsp;
+    <div class="row">
+      <img src="img/GHOST.png" alt="GHOST" style="width:203px;height:50px;">
+    </div>
+
+    <div class="row">
+      <h3>Global Hepatitis Outbreak & Surveillance Technology</h3>
+    </div>
+    &nbsp;
+    <div class="row">
+      <div class="btn-toolbar" role="toolbar" aria-label="...">
+        <div class="btn-group" role="group" aria-label="...">
+          <button id="threshold-activate-menu" type="submit" class="btn btn-primary context-menu-threshold">Threshold <span class="caret"></span></button>
+          <button id='color-activate-menu' type='button' class='btn btn-primary context-menu-colors' type='submit'>Symbols <span class="caret"></span></button>
+        </div>
+                
+        <div class="btn-group" role="group" aria-label="...">
+          <button type="button" class="btn btn-info" onclick="export_image()"><span class="glyphicon glyphicon-floppy-save"></span> Export Image</button>
+        </div>
+
+        <div class="btn-group" role="group" aria-label="...">
+          <button type="button" class="btn btn-danger" onclick="reset_display()"><span class="glyphicon glyphicon-refresh"></span> Reset</button>
+        </div>
+      </div>
+    </div>
+    &nbsp;
+    <div class="row">
+      <input type='number' id='thresholdNumber' min='0.0' max='0.04' value='0.037' step='0.001'></input>
+    </div>
+
+    <div class="row">
+      <svg id='transmission-network'></svg>
+    </div>
+  </div>
+
   <dialog id='#svg2canvas' style='visibility: hidden'>
     <canvas id='svg-export'></canvas>
   </dialog>
