--- a/force-layout.html
+++ b/force-layout.html
@@ -3,6 +3,7 @@
 
 <link rel="stylesheet" type="text/css" href="css/jquery.contextMenu.css">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 
 <script type="text/javascript" src="js/d3.js"></script>
 <script type="text/javascript" src="js/jquery-1.11.3.js"></script>
@@ -19,34 +20,41 @@
   <div class="container">
     &nbsp;
     <div class="row">
-      <img src="img/GHOST.png" alt="GHOST" style="width:203px;height:50px;">
+      <div class="col-sm-4">
+        <img src="img/GHOST.png" alt="GHOST" style="width:203px;height:50px;">
+      </div>
+      <div class="col-sm-4 col-md-offset-4" align="right">
+        <img src="img/GT.png" alt="GT" style="width:118px;height:50px;">
+      </div>
     </div>
 
     <div class="row">
-      <h3>Global Hepatitis Outbreak & Surveillance Technology</h3>
+      <h2 align="center">Global Hepatitis Outbreak & Surveillance Technology</h2>
     </div>
     &nbsp;
     <div class="row">
-      <div class="btn-toolbar" role="toolbar" aria-label="...">
-        <div class="btn-group" role="group" aria-label="...">
-          <button id="threshold-activate-menu" type="submit" class="btn btn-primary context-menu-threshold">Threshold <span class="caret"></span></button>
-          <button id='color-activate-menu' type='button' class='btn btn-primary context-menu-colors' type='submit'>Symbols <span class="caret"></span></button>
-        </div>
-                
-        <div class="btn-group" role="group" aria-label="...">
-          <button type="button" class="btn btn-info" onclick="export_image()"><span class="glyphicon glyphicon-floppy-save"></span> Export Image</button>
-        </div>
+      <div class="col-md-6 col-md-offset-3">
+        <div class="btn-toolbar" role="toolbar" aria-label="...">
+          <div class="btn-group v-align" role="group" aria-label="...">
+            <input type='number' id='thresholdNumber' min='0.0' max='0.04' value='0.037' step='0.001' style='width:10em'></input>
+          </div>
 
-        <div class="btn-group" role="group" aria-label="...">
-          <button type="button" class="btn btn-danger" onclick="reset_display()"><span class="glyphicon glyphicon-refresh"></span> Reset</button>
+          <div class="btn-group" role="group" aria-label="...">
+            <button id="threshold-activate-menu" type="submit" class="btn btn-primary context-menu-threshold">Threshold <span class="caret"></span></button>
+            <button id='color-activate-menu' type='button' class='btn btn-primary context-menu-colors' type='submit'>Symbols <span class="caret"></span></button>
+          </div>
+                  
+          <div class="btn-group" role="group" aria-label="...">
+            <button type="button" class="btn btn-info" onclick="export_image()"><span class="glyphicon glyphicon-floppy-save"></span> Export Image</button>
+          </div>
+
+          <div class="btn-group" role="group" aria-label="...">
+            <button type="button" class="btn btn-danger" onclick="reset_display()"><span class="glyphicon glyphicon-refresh"></span> Reset</button>
+          </div>
         </div>
       </div>
     </div>
     &nbsp;
-    <div class="row">
-      <input type='number' id='thresholdNumber' min='0.0' max='0.04' value='0.037' step='0.001'></input>
-    </div>
-
     <div class="row">
       <svg id='transmission-network'></svg>
     </div>
